fixed navigation on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -26,8 +26,8 @@
     color: #ccc;
     text-align: center;
     display: flex;
-    padding-left: 10rem;
-    padding-right: 10rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
   // Pagination items can be `span`s or `a`s
